--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,7 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.Bluetooth_Monitor" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <item name="colorPrimary">@color/blue</item>
+    <style name="Theme.Bluetooth_Monitor" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="colorPrimary">@color/blue_light</item>
+        <item name="android:statusBarColor">@color/blue_dark</item>
     </style>
-
-    <style name="Theme.Bluetooth_Monitor" parent="Base.Theme.Bluetooth_Monitor" />
 </resources>
